# mongosql

./: .evg.yml  .gitattributes  .gitignore  .golangci.yml  .gometalinter.json  .yamllint  CHANGELOG.md  Cargo.toml  Godeps  Gopkg.toml  IN_QUERY.sql  Makefile  PLATFORMS.md  README.md  RELEASE.md  build.sh  db.go  errors.md  evaluator.go  evergreen.yml  executor.go  go.mod  go.sum  index_usage_filter_pipeline_diff.html  index_utilization_experimentation.js  integration_test.go  makefile  options.go  package-lock.json  package.json  rolldown.config.mjs  roundtrip_test.go  sample.conf  sample.drdl  sample_query.sql  select_information_schema_test.go  select_test.go  semantics.md  server.pem  set_gopath.bat  (+10 more)
bic-trip/: Cargo.toml  README.md  RELEASE.md
bic-trip/resources/html/: mongodb.css  tab_logic.js
bic-trip/resources/scripts/: get_trr_download_count.sh  sign_macos_zip.sh
bic-trip/src/: cli.rs  main.rs
bic-trip/src/report/: lib.rs
bic-trip/src/report/csv/: mod.rs
bic-trip/src/report/html/: log_html.rs  mod.rs  schema_html.rs
bic-trip/src/report/log_parser/: mod.rs
bic-trip/src/report/schema/: mod.rs  test.rs
bic-trip/testfiles/tests/: basic_test.yml  collections_test.yml  complex_fields_test.yml  multi_logs_test.yml  query_test.yml  username_test.yml
bic-trip/tests/: log_parse_tests.rs
bic-trip/tests/common/: mod.rs
bic-trip/tests/e2e/: mod.rs
e2e-tests/: Cargo.toml  README.md  build.rs
mongodb-schema-manager/: Cargo.toml
mongodb-schema-manager/etc/: config.yml
mongodb-schema-manager/src/: cli.rs  main.rs
mongodb-schema-manager/tests/: e2e.rs
mongosql/: Cargo.toml  build.rs  metadata.go  mongosql.go  mongosql_test.go  translation_config.go
mongosql-cli/: Cargo.toml
mongosql-cli/src/: audit_trail.rs  catalog.rs  main.rs
mongosql-cli/test/: sample_query.sql  schema.json  schema.yml
mongosql/benches/: translate.rs
mongosql/src/: lib.rs  test.rs
mongosql/src/air/: definitions.rs  util.rs
mongosql/src/air/agg_ast/: ast_definitions.rs  from_test.rs
mongosql/src/air/desugarer/: accumulators.rs  join.rs  mod.rs  remove_id.rs  sql_null_semantics_operators.rs  subquery.rs  test.rs  unsupported_operators.rs  util.rs
mongosql/src/air/desugarer/testdata/: desugar_accumulators.yml  desugar_all.yml  desugar_sql_null_semantics.yml
mongosql/src/algebrizer/: definitions.rs  errors.rs  test.rs
mongosql/src/algebrizer/test/: mod.rs
mongosql/src/ast/: definitions.rs  mod.rs  pretty_print.rs  pretty_print_fuzz_test.rs  pretty_print_test.rs  semantic_fuzz_test.rs
mongosql/src/ast/rewrites/: aggregate.rs  extended_unwind_rewrite.rs  higher_order_functions.rs  mod.rs  optional_parameters.rs  scalar_functions.rs  test.rs  tuples.rs  with_query.rs
mongosql/src/ast/visitors/: test.rs
mongosql/src/catalog/: mod.rs
mongosql/src/codegen/: expressions.rs  functions.rs  match_query.rs  mod.rs  stages.rs
mongosql/src/codegen/test/: expressions.rs  match_query.rs  stages.rs
mongosql/src/internal_spec_test/: mod.rs
mongosql/src/json_schema/: mod.rs  test.rs
mongosql/src/mir/: definitions.rs  mod.rs  pretty_print.rs
mongosql/src/mir/optimizer/: mod.rs  util.rs
mongosql/src/mir/schema/: errors.rs  mod.rs  util.rs
mongosql/src/mir/schema/test/: mod.rs  (+1 more)
mongosql/src/parser/: lalrpop.rs  mongosql.lalrpop  test.rs  util.rs
mongosql/src/schema/: definitions.rs  jaccard_test.rs  test.rs
mongosql/src/translator/: expressions.rs  match_query.rs  mod.rs  stages.rs  utils.rs
mongosql/src/translator/test/: expressions.rs  match_query.rs  stages.rs
mongosql/src/usererror/: util.rs
mongosql/src/util/: mod.rs
mongosql/testdata/: simple.txt
mongosqltranslate/: Cargo.toml
mongosqltranslate/src/: command.rs  command_tests.rs  lib.rs
schema-builder-library/: Cargo.toml  README.md
schema-builder-library/src/: client_util.rs  consts.rs  context.rs  data_service.rs  errors.rs  lib.rs  mongodb_data_service.rs  notifications.rs  options.rs  partitioning.rs  schema.rs  wasm.rs
schema-builder-library/src/collection/: mod.rs  patterns.rs  test.rs
schema-builder-library/src/data-loader/: main.rs
schema-builder-library/src/data_service/: mod.rs  mongodb.rs  test.rs  types.d.ts  wasm.rs
schema-builder-library/src/internal_integration_tests/: build_schema.rs  consts.rs  derive_schema.rs  derive_schema_for_partitions.rs  dry_run.rs  get_bounds.rs  get_partitions.rs  get_size_counts.rs  mod.rs
schema-builder-library/src/partitioning/: mod.rs  partition.rs  test.rs
schema-builder-library/src/result_set/: actor.rs  catalog.rs  helpers.rs  mod.rs
schema-builder-library/src/schema/: initial_schema.rs  mod.rs  test.rs
schema-builder-library/tests/: dry_run.rs  integration_tests.rs
schema-builder-library/tests/wasm/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
schema-builder-library/tests/wasm/snaps/: uniform.test_view.schema.json  uniform.unit.schema.json
schema-builder-library/tests/wasm/src/: index.ts
schema-builder-library/tests/wasm/tests/: common.ts  process_collection.test.ts  process_view.test.ts  service.test.ts
service/: Cargo.toml  README.md  build.rs
service/src/: lib.rs  main.rs
service/src/catalog/: process_catalog.rs
service/src/metrics/: metrics_collector.rs  test.rs
service/src/service/: translate_sql_service.rs
service/src/trace/: distributed_tracing.rs  test.rs
test-utils/: Cargo.toml
test-utils/src/: e2e_db_manager.rs  lib.rs  schema_builder_library_integration_test_consts.rs
test-utils/src/build_utils/: mod.rs
test-utils/src/build_utils/templates/: index_usage_test_body_template  index_usage_test_header_template  query_test_header_template  schema_derivation_test_body_template  schema_derivation_test_header_template
test-utils/src/index/: mod.rs
test-utils/src/query/: mod.rs
test-utils/src/schema_derivation/: mod.rs
test-utils/src/templates/: index_usage_test_body_template  index_usage_test_header_template  query_test_body_template  query_test_header_template  schema_derivation_test_body_template  schema_derivation_test_header_template
(+3769 files in other folders)
