[package]
name = "bic-trip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mongosql-transition-tool"
path = "src/main.rs"

[lib]
name = "report"
path = "src/report/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
build_html = "2.4.0"
mongosql = { path = "../mongosql" }
clap = { version = "4.4.18", features = ["derive"] }
rpassword = "7.3.1"
chrono = { version = "0.4.33", features = ["serde"] }
dialoguer = "0.11.0"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
schema-builder-library = { path = "../schema-builder-library" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
sqlformat = "0.2.3"
base64 = "0.22.0"
image = "0.24.7"
zip = "0.6.2"
indicatif = "0.17.8"
thiserror = "1.0.57"
serde_yaml = "0.8.26"
scraper = "0.19.0"
