[package]
name = "bic-trip"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "mongosql-transition-tool"
path = "src/main.rs"

[lib]
name = "report"
path = "src/report/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mongodb = { workspace = true }
build_html = "2.4.0"
mongosql = { path = "../mongosql" }
clap = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dialoguer = { workspace = true }
csv = "1.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schema-builder-library = { path = "../schema-builder-library" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
sqlformat = "0.2.3"
base64 = { workspace = true }
image = "0.25.2"
zip = "2.1.5"
indicatif = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
scraper = "0.19.0"
test-utils = { path = "../test-utils" }

[features]
integration = []
