[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongosql = { path = "../mongosql" }
schema_derivation = { path = "../agg-ast/schema_derivation" }
agg-ast = { path = "../agg-ast/ast" }
test-utils = { path = "../test-utils" }
mongodb = { workspace = true }
bson = { workspace = true }

[build-dependencies]
test-utils = { path = "../test-utils" }
sql-engines-common-test-infra = { git = "https://github.com/10gen/sql-engines-common-test-infra.git", branch = "main", package = "test-generator" }

[features]
index = ["generated"]
query = ["generated"]
e2e = ["generated"]
error = ["generated"]
schema_derivation = ["generated"]
all = ["index", "query", "e2e", "error", "schema_derivation"]
generated = []
