[package]
name = "mongodb-schema-manager"
version = "0.0.0"
edition = "2021"


[dependencies]
mongodb = { workspace = true, features = ["aws-auth", "azure-oidc", "gcp-oidc"] }
clap = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true, features = ["derive"] }
schema-builder-library = { path = "../schema-builder-library" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
indicatif = { workspace = true }
confy = { version = "0.6", features = ["yaml_conf"], default-features = false }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
human-panic = "2.0.0"
glob = { workspace = true }
itertools = { workspace = true }
serde_stacker = { workspace = true }
oidc = { path = "../oidc" }
futures = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
test-utils = { path = "../test-utils" }

[lints.clippy]
unwrap_used = "deny"

[features]
integration = []
