[package]
name = "mongosql-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
mongosql = { path = "../mongosql" }
mongodb = { "workspace" = true, features = ["sync"] }
bson = { "workspace" = true }
serde_json = { "workspace" = true }
serde_yaml = { "workspace" = true }
serde = { "workspace" = true, features = ["derive"] }
clap = { "workspace" = true }
