[package]
name = "mongosql"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
bson = { workspace = true, features = ["chrono-0_4"] }
chrono = { workspace = true }
itertools = { workspace = true }
lalrpop-util = { version = "0", features = ["lexer"] }
lazy_static = { workspace = true }
linked-hash-map = { workspace = true }
quickcheck = "1"
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_yaml = { workspace = true }
serde_stacker = { workspace = true }
enum-iterator = "2"
tailcall = "1"
thiserror = { workspace = true }
variant_count = "1"
visitgen = { path = "../visitgen" }
mongosql-datastructures = { path = "../mongosql-datastructures" }
edit-distance = "2"
usererrordisplay-impl = { path = "../usererrordisplay-impl" }
derive-new = "0"
base64 = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
criterion = "0"
pprof = { version = "0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "translate"
harness = false

[build-dependencies]
lalrpop = "0"
regex = { workspace = true }
