[package]
name = "mongosqltranslate"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
mongosql = { path = "../mongosql" }
mongodb = { workspace = true } 
serde_stacker = { workspace = true }
jni = "0"
semver = "1"

[lib]
name = "mongosqltranslate"
crate-type = ["cdylib"]
