[package]
name = "schema-builder-library"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "schema_builder_library"
path = "src/lib.rs"

[dependencies]
futures = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mongosql = { workspace = true }
agg-ast = { workspace = true }
schema_derivation = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
glob = { workspace = true }
test-utils = { path = "../test-utils" }
tracing = { workspace = true }
bson.workspace = true
async-trait = { workspace = true }

[features]
integration = []

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
