[package]
name = "schema-builder-library"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "schema_builder_library"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
serde = { workspace = true }
mongosql = { workspace = true }
agg-ast = { workspace = true }
schema_derivation = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
bson.workspace = true
async-trait = { workspace = true }

# Optional dependencies enabled by features
tokio = { version = "1", default-features = false, optional = true }

# native-client dependencies
mongodb = { workspace = true, optional = true }
test-utils = { path = "../test-utils", optional = true }

# wasm dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.67", optional = true } # Note, this shouldn't be necessary. See: https://github.com/wasm-bindgen/wasm-bindgen/issues/5104#issuecomment-4223185700
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
tracing-test = "0.2"

[features]
integration = []
default = ["native-client"]
native-client = ["dep:mongodb", "dep:test-utils", "dep:tokio", "tokio/full"]
wasm = [
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:tokio",
    "tokio/sync",
    "tokio/macros",
    "tokio/rt",
]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[package.metadata.cargo-machete]
ignored = [
    "wasm-bindgen-futures" # Note, this should be removed when the following is resolved: https://github.com/wasm-bindgen/wasm-bindgen/issues/5104#issuecomment-4223185700
]