[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "tests/bin/client.rs"

[[bin]]
name = "generate_proto"
path = "src/bin/generate_proto.rs"

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
prost = "0"
tonic = "0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
tonic-reflection = "0"
mongosql = { path = "../mongosql" }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bson = { workspace = true }
tonic-build = "0"
prometheus = "0"
hyper = "1"
log = { version = "0", features = ["kv"] }
opentelemetry = "0"
opentelemetry_sdk = { version = "0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0"
opentelemetry-stdout = "0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "chrono", "time"]}

[dev-dependencies]
uuid = { version = "1", features = ["v4", "fast-rng"] }
futures-util = "0"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
opentelemetry_sdk = { version = "0", features = ["testing", "trace"] }
reqwest = { version = "0", features = ["blocking"] }

[features]
integration = []
