[package]
name = "service"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "tests/bin/client.rs"

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
prost = "0.14.3"
tonic = { version = "0.14.5", default-features = false, features = ["codegen", "router", "transport"] }
tonic-prost = "0.14.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
tonic-reflection = "0.14.5"
mongosql = { path = "../mongosql" }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bson = { workspace = true }
prometheus = "0.13.4"
hyper = { version = "0.14.30", features = ["http1", "server", "tcp"] }
log = { version = "0.4.22", features = ["kv"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.31.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "chrono", "time"]}

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
opentelemetry_sdk = { version = "0.31.0", features = ["testing", "trace"] }
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.3"

[features]
integration = []

[package.metadata.cargo-machete]
# The following crates are used in the autogenerated proto files, which
# confuses cargo-machete.
ignored = ["prost", "tonic-prost"]