[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
itertools = { workspace = true }
lazy_static = { workspace = true }
mongosql = { path = "../mongosql" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
serde_stacker = { workspace = true }

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
