[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agg-ast = { path = "../agg-ast/ast" }
itertools = { workspace = true }
lazy_static = { workspace = true }
mongosql = { path = "../mongosql" }
serde = { workspace = true, features = ["derive"] }
serde_stacker = { workspace = true }
serde_yaml = { workspace = true }
sql-engines-common-test-infra = { git = "https://github.com/10gen/sql-engines-common-test-infra.git", branch = "main", package = "test-generator" }
thiserror = { workspace = true }

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
